--- a/apps/karesansui/src/pages/KaresansuiPage.module.scss
+++ b/apps/karesansui/src/pages/KaresansuiPage.module.scss
@@ -131,7 +131,7 @@
 }
 
 .sandBowl {
-  width: clamp(300px, 46vw, 460px);
+  width: clamp(240px, 46vw, 460px);
   aspect-ratio: 1;
   border-radius: 50%;
   padding: 20px;
